--- a/Тестирование/Лекция.md
+++ b/Тестирование/Лекция.md
@@ -1,6 +1,6 @@
 <BR> ЛК1
-!image
-!image
+![image](https://user-images.githubusercontent.com/50214016/213662701-8126664d-256c-4b04-8c32-9e9ae7ab51f6.png)
+![image](https://user-images.githubusercontent.com/50214016/213662742-e798724a-50ca-4ef6-b9c2-5b015370bbcb.png)
 <br> Инкрементная модель - полностью готов отдельный элемент проекта
   Проблемы возникают при соединении элементов
  Итеративная модель - сначало делается набросок всего проекта, после вносится доработки
@@ -14,7 +14,7 @@
 <br> Большие объёмы регрессионного тестирования
 <br> Нет чёткого плана для устранения дефектов
 <BR> Спиральная модель
-  !image
+  ![image](https://user-images.githubusercontent.com/50214016/213664565-c2fcbf8e-a7d7-4daf-937d-61bb9413cc3d.png)
 <br> Управление рисками
 <br> Самая сложная модель
   <br> Проблемы тестирования при гибкой или изменяющейся структуры
@@ -25,7 +25,7 @@
   - [x] Независимый от команды или группы тестирования
   - [x] Тестировщики из другой организации
   <br> Команда тестирования
-  !image
+  ![image](https://user-images.githubusercontent.com/50214016/213667248-e53166f2-0a59-4498-aa6a-a1a8d0912ac0.png)
 <br> Руководитель проекта - сообщать об обнаруженных проектах, не тормозить проект
   <br> Программисту сообщают о дефектах
   <br> Технический писатель предоставляет ему документацию(тестировщик)
@@ -33,4 +33,37 @@
   <br> отдел маркетинга - что не соответствует желанием пользователей
   <br> Тестировщик определяет потребности пользователя
   <br> Типы и уровни тестирования
-  !image
+  ![image](https://user-images.githubusercontent.com/50214016/213669734-65e8bac1-8a69-4956-bc87-86110e618eae.png)
+<BR> ЛК2
+  <BR> Типы и уровнти тестирования
+    <BR> Ручное и автоматизированное тестирование 
+      <br> Что проверяем: функционал, производительность, нагрузки, совместимость, удобство использования, окружения
+      <BR> Уровень тестирования: компонентное, интеграционное, системное, приёмочное
+        <BR> Системное тестирование - сбербанк онлайн
+          <BR> Цель: проверка с 8 по 12 версию андроида
+            <BR> Объект: операционная система, телефон, приложения
+              <BR> Критерии входа: включен телефон, нашли в магазине, по всем требованиям
+                <BR> как заполнять отчёт и тест
+                  <BR> функционал, нагрузка, 
+                    <BR> ручное тестирование на производительность
+                      <BR> Метрика - критерий по которой проверяют приложения
+                        <BR> При автоматизировании тестирования в базис добавляется код
+                          <BR> Классификация тестирования
+                            <BR> 1. Запуск кода, нет - статическое, да - динамическое
+                              <BR> белый ящик, есть доступ, черный - нет
+                                <BR> регрессионное(возврать к пред), подтверждающий итоговый проект
+                                  <BR> Статическое - поиск дефектов, динамическое - отказ системы
+                                    ![image](https://user-images.githubusercontent.com/50214016/215058319-4244b3b4-7b26-4918-af8e-d555eb2f9bb1.png)
+                                    ![image](https://user-images.githubusercontent.com/50214016/215058463-5e588c04-aed9-4ac5-b544-f258df3700e4.png)
+
+<BR> Торрент-клиент uTorrent
+  <BR> Функциональные тесты: скачивание различных приложений, поиск приложений
+    <BR> Тесты производительности: непрерывная работа, скорость поиска приложений
+      <BR> Нагрузочные тесты: Большое количество людей скачивают и стоят на пирах
+        <BR> Тестирование совместимости: Корректная работа в других операционных системах
+          <BR> Позитивные тесты: Быстрый поиск приложений, бесплатное скачивание
+            <BR> Негативные тесты: На некоторых торрентах могут не стоят пиры
+              <BR> Исследовательские тесты: Возможность найти всё что имеется в интернете
+                <BR> Модульное тестирование: Тестирование каждого раздела
+                  <BR> Интеграционное тестирование: Возможность скачивать неограниченное количество приложений
+                    <BR> Системное тестирование: Соответствует ожиданию, все работает корректно 
