--- a/systemprog/лекция.md
+++ b/systemprog/лекция.md
@@ -80,6 +80,7 @@
    4. Ссылки(ярлык)
    5. Именованные каналы(связь)
    6. Сокеты(узлы связи)
+
 <br>https://docs.google.com/document/d/1z27O5xLblWKjIxcXRZnbd1smm-oYa8bt/edit#heading=h.lxq8x11igx58
   Unix-подобных систем: 
   1. Linux и MacOS
@@ -92,3 +93,17 @@
 <br>Изменить размер шрифта вкладка Стиль:![image](https://user-images.githubusercontent.com/97594467/214225482-61b32e0c-0967-442e-bfd2-04f95e2f6aea.png)
 <br>Файловая система:![image](https://user-images.githubusercontent.com/97594421/214225984-d64735a1-5de4-48c0-939c-caaf012d6f6c.png)
 <br>![image](https://user-images.githubusercontent.com/97594421/214226547-46a2a404-4c13-4356-ab9a-405977225243.png)-возможность копировать на Debian
+![image](https://user-images.githubusercontent.com/50214016/214227600-aa74dfd0-99bd-4222-a77a-a674978f31ee.png) - мануал или инструкция для всех команд
+  ![image](https://user-images.githubusercontent.com/50214016/214228564-813f2829-2a92-4663-b6eb-318799306dfc.png)
+  ![image](https://user-images.githubusercontent.com/50214016/214230955-63781d15-4bed-4fd9-91a0-fc898b8baf35.png)
+![image](https://user-images.githubusercontent.com/50214016/214489380-426f971b-73a5-4bf2-a75f-f1414c8717e5.png)
+![image](https://user-images.githubusercontent.com/50214016/214491764-92290ecc-d669-47bd-8355-5b120921e0ca.png)
+<br> задание 2.
+  <br> работа с файлами
+  <BR> Операция: создать, написать, прочитать, удалить, проверить
+    ![image](https://user-images.githubusercontent.com/50214016/214494172-cb4d4cd0-2dae-43c2-bbec-f0186ec03aa9.png)
+![image](https://user-images.githubusercontent.com/50214016/214496944-727aba60-02ab-40fd-92a9-5a49cf73d0e6.png)
+![image](https://user-images.githubusercontent.com/50214016/215026380-b75e2f42-58fe-49a0-8704-09c1a732d935.png)
+![image](https://user-images.githubusercontent.com/50214016/215026586-6260b289-ea11-480c-9d2d-2d6ce3fdfed8.png)
+![image](https://user-images.githubusercontent.com/50214016/215026969-584f5680-ba0e-450b-a7bd-00e922a598de.png)
+![image](https://user-images.githubusercontent.com/50214016/215027454-38b7d940-fab7-480a-a41f-56786e3e7806.png)
