--- a/systemprog/лекция.md
+++ b/systemprog/лекция.md
@@ -122,5 +122,6 @@ ctrl+c чтобы выйти из сокета
 ![Снимок экрана (38)](https://user-images.githubusercontent.com/97594123/215973382-291e3621-3133-492b-81ad-cb4331ebcfb5.png)
 
 ![image](https://user-images.githubusercontent.com/97594123/217163604-abc788e4-d64a-4263-9f86-2db5a89d85a9.png)
-
+1. что означает $
+    2.
 
