--- a/Тестирование/Лекция.md
+++ b/Тестирование/Лекция.md
@@ -67,3 +67,5 @@
                 <BR> Модульное тестирование: Тестирование каждого раздела
                   <BR> Интеграционное тестирование: Возможность скачивать неограниченное количество приложений
                     <BR> Системное тестирование: Соответствует ожиданию, все работает корректно 
+![Screenshot](https://user-images.githubusercontent.com/97594123/219617686-a9e32a2a-f1f0-4be8-82e0-316e95e57f5f.png)
+![Screenshot (1)](https://user-images.githubusercontent.com/97594123/219617692-539a9f05-95e6-45d7-bee2-15a89de9a62f.png)
