--- a/systemprog/лекция.md
+++ b/systemprog/лекция.md
@@ -167,3 +167,13 @@ Copy on write совместное адресное пространство
 ![image](https://user-images.githubusercontent.com/97594123/220559226-3d182eb4-2a9a-4b06-87aa-8cdc1621434f.png)     
 ![image](https://user-images.githubusercontent.com/97594123/220559113-87479d2c-3c6b-462a-8bb3-4f6de4ea8c9c.png)
 ![image](https://user-images.githubusercontent.com/97594123/220560365-057c1556-6f80-4130-b45c-4a75f393f238.png)
+# Задание 4
+
+       
+![2023-03-01_09-28-34](https://user-images.githubusercontent.com/97594123/222062860-a3f7b5a1-a010-4c40-8164-5af73f540a3e.png)
+![2023-03-01_09-27-38](https://user-images.githubusercontent.com/97594123/222062863-c30b4221-ea0b-43f1-be56-8ec21d5edc09.png)
+![2023-03-01_09-29-46](https://user-images.githubusercontent.com/97594123/222062865-5e1e5d41-daac-4ee9-a642-4c12b59816d5.png)
+![2023-03-01_09-29-00](https://user-images.githubusercontent.com/97594123/222062867-5069a5ef-51ce-4cbf-9dbf-870bc441c845.png)
+
+     
+
