--- a/Тестирование/Лекция.md
+++ b/Тестирование/Лекция.md
@@ -69,3 +69,25 @@
                     <BR> Системное тестирование: Соответствует ожиданию, все работает корректно 
 ![Screenshot](https://user-images.githubusercontent.com/97594123/219617686-a9e32a2a-f1f0-4be8-82e0-316e95e57f5f.png)
 ![Screenshot (1)](https://user-images.githubusercontent.com/97594123/219617692-539a9f05-95e6-45d7-bee2-15a89de9a62f.png)
+<br> План тестирования
+https://radar4site.ru/upload/000/u1/4/a/test-plan.pdf
+https://www.software-testing.ru/images/stories/library/checklist-mobile-app-testen.pdf
+<BR> Критерии приложения:
+Пользователь может вернуться на предыдущий
+экран (например, нажав "Назад" или
+"Отмена").
+ С главного экрана понятно что производит компания.
+ Добавьте иконку прогресса ("Загружается…")
+для ситуаций с низкой производительностью,
+желательно с внятным сообщением.
+Приложение правильно реагирует на смену
+ориентации устройства.
+Клавиатура подстраивается под ожидаемый
+ввод (к примеру, цифры/буквы).
+Легко ли отличить неактивные кнопки от
+активных?
+  Чеклист!!!
+Веб-приложения: https://www.software-testing.ru/images/stories/library/complete-web-application-testing-checklis.pdf
+Настольное приложение: https://sedtest-school.ru/nyuansy-testirovaniya/testirovanie-desktopnyh-prilozhenij-chek-list-po-speczificheskim-testam-prilozheniya/
+Игры: https://checklists.expert/checklist/73222-cheklist-po-igre
+[testing-template.docx](https://github.com/qune4q/6sem/files/10880762/testing-template.docx)
