--- a/Тестирование/Лекция.md
+++ b/Тестирование/Лекция.md
@@ -1,14 +1,3 @@
-<BR> ЛК1
-![image](https://user-images.githubusercontent.com/50214016/213662701-8126664d-256c-4b04-8c32-9e9ae7ab51f6.png)
-![image](https://user-images.githubusercontent.com/50214016/213662742-e798724a-50ca-4ef6-b9c2-5b015370bbcb.png)
-<br> Инкрементная модель - полностью готов отдельный элемент проекта
-  Проблемы возникают при соединении элементов
- Итеративная модель - сначало делается набросок всего проекта, после вносится доработки
-<br> Плюсы:
-  - [X] Гибкость в изменениях
-  - [X] Учимся на ошибках
-  - [X] Высокая скорость
-<br> Минусы:
   - [X] Проблемы с архитектурой 
   - [X] Неизвестна стоимость
 <br> Большие объёмы регрессионного тестирования
@@ -91,3 +80,20 @@ https://www.software-testing.ru/images/stories/library/checklist-mobile-app-test
 Настольное приложение: https://sedtest-school.ru/nyuansy-testirovaniya/testirovanie-desktopnyh-prilozhenij-chek-list-po-speczificheskim-testam-prilozheniya/
 Игры: https://checklists.expert/checklist/73222-cheklist-po-igre
 [testing-template.docx](https://github.com/qune4q/6sem/files/10880762/testing-template.docx)
+<br> Портрет тестировщика ПО
+  <BR> Личные навыки
+    Использование программных систем
+    Знания предметной области
+    Участие в различных этапах разработки ПО
+Тестировщики определяет приоритет с точки зрения бизнеса
+Softscils
+    Умение критиковать и воспринимать критику, оказывать влияение на других и умение вести переговоры, организованность, внимание к деталям и сильные навыки письменной и устной коммуникации
+    <br> unit test
+unit test должен проверять одно действие и быть универсальным
+    <br> Arrange-Act-Assert
+    (arrange) начальные переменные и ожидаемый результат
+    (act) действие
+    (assert) постусловие
+    ![image](https://user-images.githubusercontent.com/50214016/224287180-a1c61a9b-2f8f-443a-8b6a-cf319d272768.png)
+
+
